Set 'email' as email input type

--- a/templates/editcontent/fields/email.twig
+++ b/templates/editcontent/fields/email.twig
@@ -5,5 +5,5 @@
 {% endblock %}
 
 {% block field %}
-    <input type="{{ type }}" id="{{ id }}" name="{{ name }}" value="{{ value }}" class="{{ class }}">
+    <input type="email" id="{{ id }}" name="{{ name }}" value="{{ value }}" class="{{ class }}">
 {% endblock %}
