Update _label.twig template and label Vue component

--- a/templates/editcontent/fields/_partials/_label.twig
+++ b/templates/editcontent/fields/_partials/_label.twig
@@ -1,6 +1,6 @@
 {% block label %}
   {% if type != 'checkbox' %}
-    <editor-label label="{{ label }}"></editor-label>
+    <editor-label forlabel="{{ id }}" label="{{ label }}"></editor-label>
   {% endif %}
 {% endblock %}
 
