Working on Controllers

--- a/templates/finder/_quickselect.twig
+++ b/templates/finder/_quickselect.twig
@@ -1,4 +1,4 @@
-{% if allfiles %}
+{% if allfiles|default() %}
 
 <div class="row mb-3">
         <div class="selectize-control selectize form-control single">
