--- a/templates/finder/_files.twig
+++ b/templates/finder/_files.twig
@@ -28,7 +28,7 @@
             {% set icon = 'fa-image' %}
             {% set link = path('bolt_media_new', {'area': area, 'file': filename}) %}
 
-            {% for image in media if image.filename in filename %}
+            {% for image in media|default([]) if image.filename in filename %}
                 {% set title = image.title %}
                 {% set dimensions = image.width ~ ' × ' ~ image.height ~ 'px' %}
                 {% set link = path('bolt_media_edit', {'id': image.id}) %}
