--- a/templates/finder/_folders.html.twig
+++ b/templates/finder/_folders.html.twig
@@ -13,7 +13,7 @@
             <td><i class="fas fa-folder-open"></i></td>
             <td>
                 <b>
-                    <a href="{{ path('bolt_finder', {'area': area, 'path': parent }) }}">
+                    <a href="{{ path('bolt_filemanager', {'area': area, 'path': parent }) }}">
                         ../
                     </a>
                 </b>
@@ -29,7 +29,7 @@
             <td>
                 <b>
                     {% set dirname = path ~ directory.getRelativePathname() %}
-                    <a href="{{ path('bolt_finder', {'area': area, 'path': dirname }) }}">
+                    <a href="{{ path('bolt_filemanager', {'area': area, 'path': dirname }) }}">
                         {{ directory.getRelativePathname }}/
                     </a>
                 </b>
