Making Uploads behave better

--- a/templates/_partials/fields/image.html.twig
+++ b/templates/_partials/fields/image.html.twig
@@ -5,10 +5,11 @@
     {% set directory = path('bolt_upload_post', {'area': area|default('files'), 'path': setPath}) %}
     <editor-image
         :name="'{{ name }}'"
-        :value="'{{ field.get('filename') }}'"
+        :filename="'{{ field.get('filename') }}'"
         :thumbnail="'{{ field|thumbnail(width=1200, height=1200, area='files', path=setPath) }}'"
         :title="'{{ field.get('title') }}'"
         :alt="'{{ field.get('alt') }}'"
+        :media="'{{ field.get('media') }}'"
         :directory="'{{directory}}'"
     ></editor-image>
 {% endblock %}
