switched out flagkit-web for flagpack

--- a/templates/_partials/fields/geolocation.html.twig
+++ b/templates/_partials/fields/geolocation.html.twig
@@ -1,7 +1,14 @@
 {% extends '@bolt/_partials/fields/_base.html.twig' %}
 
 {% block field %}
-    <input name="{{ name }}" placeholder="First Name" type="text" value="{{ value }}" class="form-control {{ class }}" {{ attributes|default()|raw }}>
+    {% if config is defined %}
+        {% set apikey = config.get('general/google_api_key')|default(null) %}
+    {% endif %}
+    
+    {% if apikey != null %}
+      {{ apikey }}
+    {% else %}  
+        null
+    {% endif %}
 
-    (Small map, lat and long go here, somewhere)
 {% endblock %}
