--- a/templates/_partials/fields/password.html.twig
+++ b/templates/_partials/fields/password.html.twig
@@ -1,5 +1,9 @@
 {% extends '@bolt/_partials/fields/_base.html.twig' %}
 
 {% block field %}
-    <input type="password" id="{{ id }}" name="{{ name }}" value="{{ value }}" class="{{ class }}">
+    <field-password
+            :id="'{{ id }}'"
+            :name="'{{ name }}'"
+            :value="'{{ value }}'"
+    ></field-password>
 {% endblock %}
