--- a/templates/users/edit.html.twig
+++ b/templates/users/edit.html.twig
@@ -27,13 +27,15 @@
                 'disabled' : false,
             } %}
 
-            {% include '@bolt/_partials/fields/password.html.twig' with {
-                'label': 'label.password'|trans,
-                'label_class': 'required',
-                'name': 'password',
-                'value': '',
-                'class': 'form-control',
-            } %}
+            <div id="field-password">
+                {% include '@bolt/_partials/fields/password.html.twig' with {
+                    'label': 'label.password'|trans,
+                    'label_class': 'required',
+                    'name': 'password',
+                    'value': '',
+                    'class': 'form-control',
+                } %}
+            </div>
 
             {% include '@bolt/_partials/fields/email.html.twig' with {
                 'label': 'label.email'|trans,
