Add Email field and update component names

--- a/templates/_partials/fields/email.html.twig
+++ b/templates/_partials/fields/email.html.twig
@@ -1,5 +1,11 @@
 {% extends '@bolt/_partials/fields/_base.html.twig' %}
 
 {% block field %}
-    <input type="email" id="{{ id }}" name="{{ name }}" value="{{ value }}" class="{{ class }}">
+    <div id="user-email">
+        <field-email
+            :id="'{{ id }}'"
+            :name="'{{ name }}'"
+            :value="{{ value|json_encode() }}"
+        ></field-email>
+    </div>
 {% endblock %}
