--- a/templates/_partials/fields/password.html.twig
+++ b/templates/_partials/fields/password.html.twig
@@ -1,9 +1,11 @@
 {% extends '@bolt/_partials/fields/_base.html.twig' %}
 
 {% block field %}
-    <field-password
+    <div id="user-password">
+        <field-password
             :id="'{{ id }}'"
             :name="'{{ name }}'"
-            :value="'{{ value }}'"
-    ></field-password>
+            :value="{{ value|json_encode() }}"
+        ></field-password>
+    </div>
 {% endblock %}
