--- a/templates/clearcache/clearcache.html.twig
+++ b/templates/clearcache/clearcache.html.twig
@@ -6,6 +6,7 @@
 
     <div class="row">
         <div class="col-md-9">
+            <a href="{{ path('bolt_clear_cache') }}" class="btn btn-primary">{{ 'caption.clear_cache'|trans }}</a>
         </div>
     </div>
 
