Add encore scripts to layout_blank.html.twig

--- a/templates/_base/layout_blank.html.twig
+++ b/templates/_base/layout_blank.html.twig
@@ -19,7 +19,7 @@
         {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('assets/bolt.js') }}"></script>
+    {{ encore_entry_script_tags('bolt') }}
 {% endblock %}
 </body>
 
