--- a/templates/content/view_locales.html.twig
+++ b/templates/content/view_locales.html.twig
@@ -17,33 +17,53 @@
 
 {% block main %}
 
-    Main
-
     {% set locales = record.definition.locales %}
 
-    {{ dump(locales) }}
-    <table>
+    <table class="table">
         <tr>
             <th>Field</th>
             {% for locale in locales %}
-                <th>{{ locale }}</th>
+                <th>{{ flag(locale) }}{{ locale }}</th>
             {% endfor %}
         </tr>
-        {% for name, field in record.fields %}
+        {% for name, field in record.localisedfields %}
             <tr>
-                <td>{{ field.name }}{{ dump(field.definition) }}</td>
+                <td>
+                    <b>{{ field.definition.label|default(field.name) }}</b><br>
+                    Type: {{ field.definition.type }}<br>
+                </td>
                 {% for locale in locales %}
-                    <td>{{ locale }}</td>
+                    <td>
+                        {% set value = record.localisedfield(field.name, locale, false) %}
+                        {% if not field.definition.localise and not loop.first %}
+                            <span class="badge badge-info">Default</span>
+                        {% elseif value %}
+                            <span class="badge badge-success">OK</span>
+                        {% else %}
+                            <span class="badge badge-warning">Missing</span>
+                        {% endif %}
+                    </td>
+
                 {% endfor %}
             </tr>
         {% endfor %}
+
+        <tr>
+            <td>&nbsp;</td>
+            {% for locale in locales %}
+                <td>
+                    <a href="{{ path('bolt_content_edit', {'id': record.id, 'locale': locale}) }}" class="btn btn-secondary btn-sm">
+                        {{ 'action.edit'|trans }}
+                    </a>
+                </td>
+
+            {% endfor %}
+        </tr>
+
     </table>
 
 {% endblock %}
 
 {% block aside %}
-
-
-    aside
 
 {% endblock aside %}
