Clean up labels, postfix and prefix

--- a/templates/_partials/fields/_base.html.twig
+++ b/templates/_partials/fields/_base.html.twig
@@ -64,16 +64,12 @@
 <!-- field " {{ type }} {{ variant }} {{ label }} {{ name }} -->
 <div class="form-group editor--group is-{{variant}}">
 
-{% if prefix %}
-    {% include '_partials/fields/_partials/_helper.html.twig' with { type: 'prefix', message: prefix} %}
-{% endif %}
+{{ prefix|raw }}
 {% block label %}
-    {% include '_partials/fields/_partials/_label.html.twig' %}
+    {% include '_partials/fields/_label.html.twig' %}
 {% endblock %}
 {% block field %}
 
 {% endblock %}
-{% if postfix %}
-    {% include '_partials/fields/_partials/_helper.html.twig' with { type: 'postfix', message: postfix} %}
-{% endif %}
+{{ postfix|raw }}
 </div>
