--- a/templates/_partials/fields/number.html.twig
+++ b/templates/_partials/fields/number.html.twig
@@ -9,9 +9,13 @@
   {# set step #}
   {% if step is not defined and mode == 'integer' %}
     {% set step = define.step|default(0.5) %}
-  {% else %}
+  {% elseif mode == 'integer' %}
     {% set step = 1 %}
+  {% else %}
+    {% set step = 0 %}
   {% endif %}
+
+  {% set value = value|number_format(32) %}
 
   <editor-number
     name="{{ name }}"
