fixed number breaking issue

--- a/templates/_partials/fields/number.html.twig
+++ b/templates/_partials/fields/number.html.twig
@@ -13,9 +13,10 @@
     {% set step = 1 %}
   {% endif %}
 
+
   <editor-number
     name="{{ name }}"
-    :value="{{ value }}"
+    value="{{ value }}"
     :step="{{ step }}"
   ></editor-number>
 
