--- a/public/theme/skeleton/index.twig
+++ b/public/theme/skeleton/index.twig
@@ -23,4 +23,13 @@
 
     {% endif %}
 
+    <hr>
+    {% setcontent pages = "pages" %}
+
+    <ul>
+    {% for page in pages %}
+        <li><a href="{{ page.link }}">{{ page.title }}</a></li>
+    {% endfor %}
+    </ul>
+
 {% endblock main %}
